.helm/templates/20-administration-backend-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: administration-backend
  namespace: integration
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /administration/api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: administration-backend
                port:
                  number: 3000
